<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostEvent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:minHeight="48dp"
        android:orientation="horizontal"
        android:background="@color/colorWhite">

        <ImageView
            android:id="@+id/back"
            android:maxHeight="48dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/arrow"
            android:layout_weight="1"
            android:onClick="back"
            android:padding="8dp"/>

        <EditText
            android:id="@+id/enterEvent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:hint="@string/enterEvent"
            android:textColorHint="@color/colorDark"
            android:layout_weight="4"
            android:inputType="textCapWords"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="10"
        android:gravity="center"
        android:background="@drawable/paragraph">
            <TextView
                android:id="@+id/addPhoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:text="@string/addImage"
                android:gravity="center"
                android:textSize="16pt"
                android:textStyle="bold"
                android:textColor="@color/colorLight"
            />
            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:onClick="pickImage"/>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:translationY="-4dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/paragraph"
            android:inputType="numberDecimal"
            android:hint="@string/price"
            android:textColorHint="@color/colorLight"
            android:textColor="@color/colorLight"
            android:textAlignment="center"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:translationY="-4dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/paragraph"
            android:inputType="datetime"
            android:hint="@string/date"
            android:textColorHint="@color/colorLight"
            android:textColor="@color/colorLight"
            android:textAlignment="center"
            android:layout_weight="1"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:background="@drawable/paragraph">
        <EditText
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/desc"
            android:textColorHint="@color/colorLight"
            android:inputType="textLongMessage"
            android:singleLine="true"
            android:textColor="@color/colorLight"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:scrollbars="vertical"
            android:scrollbarTrackVertical="@color/colorDark"
            android:scrollbarThumbVertical="@color/colorPrimary" />
    </FrameLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="48dp"
        android:paddingEnd="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/upload"
        android:textColor="@color/colorLight"
        android:textAllCaps="false"
        android:onClick="upload"
        android:background="@drawable/simple_button"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>